--- a/templates/dashboard/student_my_results.html
+++ b/templates/dashboard/student_my_results.html
@@ -21,9 +21,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
-                    <div class="card-header pb-0 border-0">
-                        <h4 class="card-title mb-0">View My Results</h4>
-                    </div>
+      
                     <br>
 
                     <!-- Filters -->
@@ -448,10 +446,12 @@ function createCoursePerformancePieChart(courseData) {
 function createGradeStatistics(courseData) {
     const gradeStatsContainer = document.getElementById('gradeStats');
     // Calculate grade distribution
-    const gradeOrder = ['A', 'B', 'C', 'D', 'E', 'F'];
+    const gradeOrder = ['A', 'AB','B', 'BC', 'C', 'D', 'E', 'F'];
     const gradeColors = {
         'A': 'bg-success',
+        'AB': 'bg-info',
         'B': 'bg-primary',
+        'BC': 'bg-dark',
         'C': 'bg-info',
         'D': 'bg-warning',
         'E': 'bg-secondary',
