--- a/templates/dashboard/submitted_grades.html
+++ b/templates/dashboard/submitted_grades.html
@@ -45,16 +45,14 @@
 
                     <div class="col-lg-12">
                         <div class="card">
-                            <div class="card-header pb-0 border-0">
-                                <h4 class="card-title mb-0">Submitted Grades</h4>
-                            </div>
+             
                             <br>
 
 
 
                             <!-- Filters -->
                             <div class="px-3 pb-3">
-                                <div class="bg-light rounded p-3 mb-3">
+                                <div class="card-gradient-info rounded p-3 mb-3">
                                     <div class="row g-3 align-items-center">
                                         <div class="col-md-2">
                                             <h6 class="mb-0 text-muted">
@@ -100,7 +98,7 @@
 
                                         <!-- Clear Button -->
                                         <div class="col-md-2" style="margin-top: 1em;">
-                                            <button type="button" class="btn btn-outline-secondary btn-sm" onclick="clearFilters()" title="Clear all filters">
+                                            <button type="button" class="btn btn-secondary btn-sm" onclick="clearFilters()" title="Clear all filters">
                                                 <i class="fas fa-times me-1"></i>Clear
                                             </button>
                                         </div>
