--- a/templates/dashboard/view_all_results.html
+++ b/templates/dashboard/view_all_results.html
@@ -23,16 +23,12 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
-                    <div class="card-header pb-0 border-0">
-                        <h4 class="card-title mb-0">Results Overview</h4>
-                        
-
-                    </div>
+          
                     <br>
 
                     <!-- Filters -->
                     <div class="px-3 pb-3">
-                        <form method="GET" class="bg-light rounded p-3 mb-3">
+                        <form method="GET" class="card-gradient-info rounded p-3 mb-3">
                             <div class="row g-3 align-items-center">
                                 <div class="col-md-2">
                                     <h6 class="mb-0 text-muted">
