--- a/templates/dashboard/submitted_grades.html
+++ b/templates/dashboard/submitted_grades.html
@@ -52,7 +52,7 @@
 
                             <!-- Filters -->
                             <div class="px-3 pb-3">
-                                <div class="card-gradient-info rounded p-3 mb-3">
+                                <div class="bg-light rounded p-3 mb-3">
                                     <div class="row g-3 align-items-center">
                                         <div class="col-md-2">
                                             <h6 class="mb-0 text-muted">
