--- a/templates/dashboard/view_all_results.html
+++ b/templates/dashboard/view_all_results.html
@@ -107,13 +107,13 @@
                                 <button onclick="publishAllResults()" class="btn btn-success btn-sm ms-3" title="Publish All Results">
                                     <i class="fas fa-check"></i> Publish All Results
                                 </button>
-
+{% comment %} 
 
                                  <a href="{% url 'export_results_csv' %}?level={{ selected_level }}&semester={{ selected_semester }}"
                                    class="btn btn-success btn-sm">
                                     <i class="fas fa-file-csv me-1"></i>
                                     Export to CSV
-                                </a>
+                                </a> {% endcomment %}
                                 
                             </div>
                             
